--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,178 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --color-primary: #eaf6f6;
+  --color-primary-light: #d6efef;
+  --color-text: #031e39;
+  --color-text-dark: #adb5bd;
+  --color-background-100: #fcfefe;
+  --color-background-500: #eaf6f6;
+  --color-background-900: #66bfbf;
+  --color-red: #fa5252;
+  --color-red-dark: #e03131;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  color: var(--color-text);
+  background-color: var(--color-background-900);
+  padding: 2.4rem;
+}
+
+
+.nav-bar {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  height: 7.2rem;
+  padding: 0 3.2rem;
+  background-color: var(--color-primary);
+  border-radius: 0.9rem;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+
+}
+
+.logo span {
+  font-size: 3.2rem;
+}
+
+.logo h1 {
+  font-size: 2.4rem;
+  font-weight: bold;
+  color: var(--color-text);
+}
+
+.search{
+  justify-self: center;
+  border: none;
+  padding: 1.1rem 1.6rem;
+  font-size: 1.8rem;
+  border-radius: 0.7rem;
+  width: 40rem;
+  transition: all 0.3s;
+  color: var(--color-text);
+  background-color: var(--color-primary-light);
+
+  /* background-color: var(--color-background-900); */
+}
+
+.main {
+  margin-top: 2.4rem;
+  height: calc(100vh - 7.2rem - 3 * 2.4rem);
+  display: flex;
+  gap: .4rem;
+  justify-content: center;
+}
+
+.box {
+  width: 50rem;
+  max-width: 50rem;
+  background-color: var(--color-background-500);
+  border-radius: 0.9rem;
+  overflow: auto;
+  position: relative;
+}
+
+.list {
+  list-style: none;
+  padding: 0.8rem 0;
+  /* overflow: scroll; */
+}
+
+.list li {
+  position: relative;
+  display: grid;
+  grid-template-columns: 4rem 1fr;
+  grid-template-rows: auto auto;
+  column-gap: 2.4rem;
+  font-size: 1.6rem;
+  align-items: center;
+
+  padding: 1.6rem 3.2rem;
+  border-bottom: 1px solid var(--color-background-100);
+}
+
+.list.list-movies li {
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.list.list-movies li:hover {
+  background-color: var(--color-background-100);
+}
+
+.list img {
+  width: 100%;
+  grid-row: 1 / -1;
+}
+
+.list h3 {
+  font-size: 1.8rem;
+  /* color: white; */
+}
+
+.list div {
+  display: flex;
+  align-items: center;
+  gap: 2.4rem;
+}
+
+.list p {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+/* .details{
+  padding: 5%;
+} */
+
+.details-up{
+  padding: 5%;
+  display: flex;
+  margin: auto;
+  margin-bottom: 10px;
+  background-color: var(--color-primary-light);
+
+  gap: 20px;
+}
+
+.details img {
+  width: 100%;
+}
+
+.details-up-right h2{
+  font-size: 2.4rem;
+  margin-bottom: 0.4rem;
+  line-height: 1.1;
+}
+.details-up-right p{
+  font-size: 1.4rem;
+  margin-bottom: 0.4rem;
+  margin-top: 1.4rem;
+  line-height: 1.1;
+}
+
+.details-down p{
+  padding: 5%;
+  margin-top: 30px;
+  line-height: 1.4;
+  font-size: 1.4rem;
+}
+
+
